10-Ingress-Context-Path-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Context-Path-Based-Routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: /app1/index.html
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
      - pathType: Exact
        path: /app2/index.html
        backend:
          service:
            name: app2-nginx-clusterip-service
            port:
              number: 80         
      - pathType: Exact
        path: /
        backend:
          service:
            name: usermgmt-webapp-clusterip-service
            port: 
              number: 80
